--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 Pyrogram
 youtube_dl
+yt_dlp
 youtube_search_python
 youtube_search
 requests
 ffmpeg-python
 ffmpeg
 TgCrypto
-https://raw.githubusercontent.com/HasibulKabir/pyrogramarchive/master/pyrogramasyncv0.18.0.zip
-git+https://github.com/ytdl-org/youtube-dl
 wget
 pillow
 hachoir
